# name: TestPushStatus.test[uvloop-None]
  <class 'dict'> {
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: TestPushStatus.test_bad_state[uvloop]
  <class 'dict'> {
    'errors': <class 'dict'> {
      'state': <class 'list'> [
        'unallowed value bad',
      ],
    },
    'id': 'invalid_input',
    'message': 'Invalid input',
  }
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_missing_error[uvloop]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Missing error information',
    },
  )
---
# name: TestPushStatus.test_name_and_description[uvloop]
  <class 'dict'> {
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: test_acquire[uvloop-None]
  <class 'dict'> {
    'acquired': True,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'key': 'key',
    'progress': 3,
    'rights': <class 'dict'> {
    },
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_archive[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': True,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'progress': 1,
    'rights': <class 'dict'> {
    },
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_cancel[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'progress': 0,
    'rights': <class 'dict'> {
    },
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_delete[uvloop-None]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_delete[uvloop-complete]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_delete[uvloop-failed]
  <class 'dict'> {
    'removed': <class 'list'> [
    ],
  }
---
# name: test_delete[uvloop-finished]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_find_beta[uvloop-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2022-06-13T09:43:07Z',
        'id': 'sk1wj693',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-09-24T20:51:45Z',
        'id': 'fczq56va',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-04-27T15:20:30Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-03-17T03:17:57Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2018-10-30T16:14:06Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-10-25T22:05:44Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-08-03T16:06:20Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-10T01:46:32Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 8,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': '2022-09-28T05:48:34Z',
        'id': 'ef4bhjln',
        'progress': 87,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2022-06-26T11:48:26Z',
        'id': '03cvzfiq',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2022-06-13T09:43:07Z',
        'id': 'sk1wj693',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-09-24T20:51:45Z',
        'id': 'fczq56va',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-04-27T15:20:30Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2020-03-17T03:17:57Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2018-10-30T16:14:06Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2018-08-22T02:49:18Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-10-31T03:06:49Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-10-25T22:05:44Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-28T02:17:43Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-08-03T16:06:20Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-10T01:46:32Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-10-17T07:23:48Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-02-11T13:05:09Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 15,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': '2022-09-28T05:48:34Z',
        'id': 'ef4bhjln',
        'progress': 87,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2022-06-26T11:48:26Z',
        'id': '03cvzfiq',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2018-08-22T02:49:18Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-10-31T03:06:49Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-28T02:17:43Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-10-17T07:23:48Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-02-11T13:05:09Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 7,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-09-24T20:51:45Z',
        'id': 'fczq56va',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-10T01:46:32Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-09-24T20:51:45Z',
        'id': 'fczq56va',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2016-11-10T01:46:32Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 1,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'progress': 1,
    'rights': <class 'dict'> {
    },
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
